# NN_backprop_optimization

./: .gitignore  README.md  pyproject.toml
configs/: benchmark_default.yaml  train_default.yaml
configs/experiments/: later_scaffold.yaml  medium.yaml  starter_narrow.yaml
docs/: architecture.md  roadmap.md
src/nn_opt_rd/: __init__.py
src/nn_opt_rd/benchmark/: manifest.py  reporting.py  runner.py
src/nn_opt_rd/cli/: benchmark.py  experiment.py  train.py
src/nn_opt_rd/config/: loader.py  schema.py
src/nn_opt_rd/controller/: interface.py
src/nn_opt_rd/diagnostics/: basic.py
src/nn_opt_rd/harness/: losses.py  trainer.py
src/nn_opt_rd/interfaces/: core.py
src/nn_opt_rd/logging/: metrics.py
src/nn_opt_rd/models/: linear_model.py
src/nn_opt_rd/optimizers/: baselines.py
src/nn_opt_rd/probe/: interface.py
src/nn_opt_rd/tasks/: linear_regression.py
tests/: test_controller_safety.py  test_experiment_manifest.py  test_experiment_runner.py  test_integration_controller.py  test_reporting.py  test_smoke_benchmark.py  test_smoke_train.py
