[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-opt-rd"
version = "0.1.0"
description = "Optimizer R&D baseline repository"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
]

[project.scripts]
nn-opt-train = "nn_opt_rd.cli.train:main"
nn-opt-benchmark = "nn_opt_rd.cli.benchmark:main"
nn-opt-experiment = "nn_opt_rd.cli.experiment:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
